--- a/gb/24/6/10/n14267684.md
+++ b/gb/24/6/10/n14267684.md
@@ -17,34 +17,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/11/n14092322.md#1">国庆焰火施放提早20分钟 散场一团乱惹怨</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/12/n14093699.md#1">国庆焰火究责 庆筹会道歉、国安局指未参与决策</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/12/n14224407.md#1">国庆焰火无人机遭疑使用中国货 监察院：行政院应检讨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267672.md#1">【专访】刘文斌：习近平恐误信谗言攻台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267634.md#1">端午连假投奔自由？ 6旬陆男驾小艇直闯渔人码头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267519.md#1">南化水库蓄水率75%再创新高 高市府：高雄不缺水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267183.md#1">陆无人机闯金门投传单 台立委：疑测试我防御盲区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267176.md#1">在台港人游行提四大诉求 盼各界关注香港情势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309546.md#1">奥运台湾获2金5铜 赖清德感谢民众一起挺台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309133.md#1">林郁婷夺金 “拳”释梦想</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309068.md#1">林郁婷夺金 林佳龙：对抹黑最好反击 也给台湾人信心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309000.md#1">“台湾拳后”林郁婷无惧性别争议 为台再夺一金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308655.md#1">美民调：66%认台扩张军备抗共 再给协防保证</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/24/n9988943.md#1" target="_blank">共产党毁灭人类暴政录——前言</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14266976.md#1">【时事军事】星舰新成就 令美空军接近梦想</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266420.md#1">【人物真相】低调神秘 刘志强为何退休后落马？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266633.md#1">中国经济衰退 多省房价跌破千元/平方米</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266630.md#1">分析：李强开会释放中国房地产不妙信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266541.md#1">大陆银行职员买千万别墅 被前儿媳举报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266834.md#1">女版陆片《战狼》翻车 预售票房仅4.6万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266019.md#1">松冈茉优与有冈大贵结婚 两人都是童星出身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266828.md#1">杨颖遭软封杀9个月 两个迹象显示将获解封</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266338.md#1">邓超孙俪俏皮发文 甜蜜庆祝两人结婚14周年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266320.md#1">张学友染RSV病毒取消演出?买黄牛票者或亏爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264865.md#1">冬病夏治更好！手脚冰冷、易感冒者现在快做1件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264733.md#1">【健康1+1】蒸地瓜、山药吃出脂肪肝？3招可逆转</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264728.md#1">想让孩子的内心强大 父母千万别做这些事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/10/n14267684.htm">国庆焰火首次移师云林</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267684.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
