--- a/gb/24/6/5/n14264532.md
+++ b/gb/24/6/5/n14264532.md
@@ -8,7 +8,7 @@
 <hr>
 <p>【大纪元2024年06月05日讯】（大纪元记者天睿澳洲悉尼编译报导）维州第四家养鸡场爆发了禽流感疫情，所有鸡只将被扑杀。</p>
 <p>周三（6月5日），维州农业厅证实，维州西南部金色平原郡（Golden Plains Shire）的一个养鸡场检测出高致病性H7N3禽流感毒株。</p>
-<p>该养鸡场所在区域已经有另两家养鸡场在过去几周测出相同的禽流感毒株，这两家养鸡称分别位于梅里迪思（Meredith）和莱思布里吉（Lethbridge）地区。</p>
+<p>该养鸡场所在区域已经有另两家养鸡场在过去几周测出相同的禽流感毒株，这两家养鸡场分别位于梅里迪思（Meredith）和莱思布里吉（Lethbridge）地区。</p>
 <p>刚测出禽流感的这家养鸡场已经被隔离，所有家禽都会被扑杀，场地会进行消毒。</p>
 <p>另一个位于特朗（Terang）地区的养鸡场也爆发了禽流感疫情，只是测出的毒株不同，这里距离梅雷迪思养鸡场约130公里，两家养鸡场的经营者都是Avgo and Surf Coast Eggs Farms农场。</p>
 <p>梅雷迪思地区和特朗地区的养鸡场已经有50万只鸡被扑杀。</p>
@@ -24,35 +24,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14256722.md#1">维州又一农场爆发禽流感 全澳蛋农高度戒备</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14257820.md#1">禽流感致鸡蛋日产量减少45万 蛋价恐上涨</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263624.md#1">维州第三个农场爆发禽流感 感染源待查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264505.md#1">长周末油价即将上涨 驾车者需早点加油</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263872.md#1">建筑工未获优先 健康教练则入编移民清单</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264290.md#1">全球柑橘减产 澳洲橙汁价格大幅上涨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264205.md#1">【专访】前中共特工：危险人生之旅（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264452.md#1">6月6日起南澳首置业者购新房免印花税</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309635.md#1">专家呼吁设立垃圾分类国家标准</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309616.md#1">直升机坠毁酒店楼顶 据称飞机被盗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309545.md#1">昆州或遇最严重流感季 政府增医疗投资应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309586.md#1">一对男女陈尸悉尼华人区住宅楼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309574.md#1">调查：担心电费高昂 近半澳人今年冬天挨冻</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258414.md#1">安金藏剖心的一刀 忠义震慑逆乱 挽救了唐朝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258188.md#1">摄生高人孙思邈的神通与道行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260958.md#1">【百年真相】中共史上首次大屠杀 毛打AB团</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262783.md#1">【新闻大家谈】于大海：不爱党 才能真爱国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263404.md#1">【远见快评】总参统计的六四遇难者数据惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262972.md#1">中南海频传收缴权贵财富 有人被指交20亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261821.md#1">在这些亚洲国家花费不多 可过舒适退休生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262423.md#1">《沙丘2》2024目前最卖座 导演却失望 盼被取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263337.md#1">《庆余年2》又现穿帮镜头 屋顶有智能手机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263308.md#1">汤唯放闪导演丈夫：他有6岁男孩的好奇心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262868.md#1">胜寛看《Wonderland》追忆文彬 向朴宝剑致谢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263721.md#1">母陈尸顶楼 唐治平一度失联 经纪人代发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262341.md#1">绿叶蔬菜保存 简单4诀窍延长保鲜期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263686.md#1">买不起新鲜蔬果 吃冷冻的也一样健康吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262424.md#1">研究：柳橙皮有助于改善心脏健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260837.md#1">秋葵热量低又营养 教你如何料理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/5/n14264532.htm">维州第四家养鸡场爆发禽流感疫情</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264532.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
